sumo/tests/sumo/errors/person/unconnected_stop/errors.sumo
Error: Disconnected plan for person 'p1' (middle!=end).
Quitting (on error).
